2006-02-27  Eric Seidel  <eseidel@apple.com>

        Rubber-stamped by mjs.

        Fix FrameWin.h to use consistant line endings.
        Fix TemporaryLinkStubs to better match style guidelines.

        * bridge/win/FrameWin.h:
        (WebCore::Win):
        * platform/win/TemporaryLinkStubs.cpp:
        (QLineEdit::selectAll):
        (QPainter::save):
        (Widget::enableFlushDrawing):
        (QPainter::drawHighlightForText):
        (QFont::setPrinterFont):
        (QTextEdit::textWithHardLineBreaks):
        (Widget::mapFromGlobal):
        (QPainter::addClip):
        (QLineEdit::cursorPosition):
        (QPainter::setPen):
        (QPainter::selectedTextBackgroundColor):
        (QPainter::fontMetrics):
        (Widget::show):
        (QFont::setItalic):
        (QSlider::setValue):
        (QLineEdit::addSearchResult):
        (KWQFileButton::click):
        (QLineEdit::setWritingDirection):
        (QPainter::drawFocusRing):
        (KWQFileButton::sizeForCharacterWidth):
        (QTextEdit::sizeWithColumnsAndRows):
        (QComboBox::clear):
        (QPainter::misspellingLineThickness):
        (QComboBox::setFrameGeometry):
        (QLineEdit::maxLength):
        (Widget::isEnabled):
        (KWQServeRequest):
        (QTextEdit::setText):
        (Widget::paint):
        (QPainter::addRoundedRectClip):
        (FrameView::viewportToGlobal):
        (QTextEdit::selectionEnd):
        (QFont::determinePitch):
        (QTextEdit::setScrollBarModes):
        (QPainter::drawEllipse):
        (QTextEdit::setReadOnly):
        (QListBox::appendItem):
        (QLineEdit::setPlaceholderString):
        (Cursor::Cursor):
        (Widget::focusPolicy):
        (ScrollView::removeChild):
        (QTextEdit::selectAll):
        (QPainter::fillRect):
        (QPainter::endTransparencyLayer):
        (QFont::QFont):
        (ScrollView::addChild):
        (QTextEdit::setDisabled):
        (QScrollBar::scroll):
        (Widget::~Widget):